--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Light Game</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-css-reset/dist/reset.min.css"
@@ -18,6 +18,42 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <main>
+    <section class=""light-container">
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+    </section>
+    <section class=""light-container">
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+    </section>
+    <section class=""light-container">
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+        <div class="light-box">
+            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+        </div>
+    </section>
+</main>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
