--- a/index.html
+++ b/index.html
@@ -1,59 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Light Game</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-css-reset/dist/reset.min.css"
     />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-    crossorigin="anonymous"
-  />
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <main>
-    <section class=""light-container">
+      <section class="light-container">
         <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
         </div>
         <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
         </div>
         <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
-        </div>
-    </section>
-    <section class=""light-container">
-        <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
-        </div>
-        <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
         </div>
         <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
-        </div>
-    </section>
-    <section class=""light-container">
-        <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
-        </div>
-        <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
         </div>
         <div class="light-box">
-            <img class="light-bulb" src="https://www.w3schools.com/js/pic_bulboff.gif" alit="light bulb">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
         </div>
-    </section>
-</main>
+        <div class="light-box">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
+        </div>
+        <div class="light-box">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
+        </div>
+        <div class="light-box">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
+        </div>
+        <div class="light-box">
+          <img
+            class="light-bulb"
+            src="https://www.w3schools.com/js/pic_bulboff.gif"
+            alit="light bulb"
+          />
+        </div>
+      </section>
+    </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
